// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StorageUtility should persist Tier C after Tiers A, B have expired 1`] = `
LocalStorage {
  "C-test": "{\\"hello\\":\\"456\\"}",
  "last-change": "1531764621644",
}
`;

exports[`StorageUtility should persist Tiers B, C after Tier A has expired 1`] = `
LocalStorage {
  "C-B-test": "{\\"hello\\":\\"321\\"}",
  "C-test": "{\\"hello\\":\\"456\\"}",
  "last-change": "1531764620388",
}
`;

exports[`StorageUtility should persist all tiers if not enough inactivity 1`] = `
LocalStorage {
  "C-B-A-test": "{\\"hello\\":\\"123\\"}",
  "C-B-test": "{\\"hello\\":\\"321\\"}",
  "C-test": "{\\"hello\\":\\"456\\"}",
  "last-change": "1531764619384",
}
`;

exports[`StorageUtility should properly get a value in target 1`] = `
Object {
  "hello": "123",
}
`;

exports[`StorageUtility should properly initialize tierMap 1`] = `
Object {
  "A": Object {
    "expiration": 500,
    "key": "C-B-A",
  },
  "B": Object {
    "expiration": 1000,
    "key": "C-B",
  },
  "C": Object {
    "expiration": 1500,
    "key": "C",
  },
}
`;

exports[`StorageUtility should properly set a value in target 1`] = `"{\\"hello\\":\\"123\\"}"`;

exports[`StorageUtility should remove all keys in tiers (but spare those outside) 1`] = `
LocalStorage {
  "another": "value",
  "last-change": "1531764619636",
}
`;

exports[`StorageUtility should remove all tiers if enough inactivity 1`] = `
LocalStorage {
  "last-change": "1531764623401",
}
`;
